--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>美团点评招聘官网</title>
+    <title>mobx demo</title>
 </head>
 <body>
 <div id="app"></div>
